[tool.poetry]
name = "docker-tskit"
version = "0.5.0"
description = "Docker image with tskitetude software"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tskitetude = { git = "https://github.com/bunop/TSKITetude.git", rev = "00bfb2af4ad20dcfacc6a85cc93f0f581a77ce52" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
