[tool.poetry]
name = "docker-tskit"
version = "0.5.1"
description = "Docker image with tskitetude software"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tskitetude = {git = "https://github.com/bunop/TSKITetude.git", rev = "78e5aac36718ada60f73142296e66c25e87b76d6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
